--- a/protoc-gen-csi/CMakeLists.txt
+++ b/protoc-gen-csi/CMakeLists.txt
@@ -1,7 +1,4 @@
-# Copyright Yahoo. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
-vespa_add_executable(protoc-gen-csi
-  SOURCES
-  protoc_gen_csi.cpp
-  EXTERNAL_DEPENDS
-  protoc
-)
+# Copyright Yahoo. Licensed under the terms of the Apache 2.0 license. See
+# LICENSE in the project root.
+vespa_add_executable(protoc-gen-csi SOURCES protoc_gen_csi.cpp EXTERNAL_DEPENDS
+                     protoc)
